committed before flex-container placed around entire footer for space between purposes

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     </div>
     <!-- News, Announcements, and Products -->
     <main class="row nap">
+      <div class="col-md-1 blank-nap"></div>
       <div class="col-md-4 box">
           <h4 class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
           <div class="row">
@@ -342,11 +343,11 @@
                      <div class="col-md-8 information">
                        <p class="text" href="#">1100 Pico Blvd<br>Santa Monica, CA 90405<br>United States</p>
                      </div>
-                     <div class="border-line"></div>
+                      <div><p class="border-line"></p></div>
                    </div>
                    <div class="row flex-container phone">
                      <div class="col-md-1 icon">
-                      <p><i class="fa fa-map-phone" aria-hidden="true"></i></p>
+                      <p><i class="fa fa-phone" aria-hidden="true"></i></p>
                      </div>
                      <div class="col-md-3 contact-type">
                        <p href="#">Phone:</p>
@@ -354,11 +355,11 @@
                      <div class="col-md-8 information">
                        <p class="text" href="#">+4401233123208</p>
                      </div>
-                     <div class="border-line"></div>
+                     <div><p class="border-line"></p></div>
                    </div>
                    <div class="row flex-container email">
                      <div class="col-md-1 icon">
-                      <p><i class="fa fa-map-send" aria-hidden="true"></i></p>
+                      <p><i class="fa fa-send" aria-hidden="true"></i></p>
                      </div>
                      <div class="col-md-3 contact-type">
                        <p href="#">Email:</p>
@@ -366,11 +367,11 @@
                      <div class="col-md-8 information">
                        <p class="text" href="#">support@nortsea.com</p>
                      </div>
-                     <div class="border-line"></div>
+                      <div><p class="border-line"></p></div>
                    </div>
                    <div class="row flex-container gps">
                      <div class="col-md-1 icon">
-                      <p><i class="fa fa-map-compass" aria-hidden="true"></i></p>
+                      <p><i class="fa fa-compass" aria-hidden="true"></i></p>
                      </div>
                      <div class="col-md-3 contact-type">
                        <p href="#">GPS:</p>
@@ -378,40 +379,12 @@
                      <div class="col-md-8 information">
                        <p class="text" href="#">10.021211-118.469009</p>
                      </div>
-                     <div class="border-line"></div>
+                     <div><p class="border-line"></p></div>
                    </div>
-
-                      <!-- <p><i class="fa fa-phone" aria-hidden="true"></i></p>
-                      <p><i class="fa fa-send" aria-hidden="true"></i></p>
-                      <p><i class="fa fa-compass" aria-hidden="true"></i></p>
-                    </div>
-                    <div class="col-md-4 contact-type">
-
-                      <p href="#">Phone:</p>
-                      <p href="#">Email:</p>
-                      <p href="#">GPS:</p>
-                    </div>
-                     <div class="col-md-4 information">
-                       <p class="text" href="#">1100 Pico Blvd Santa Monica, CA 90405 United States</p>
-                       <p class="text" href="#">+4401233123208</p>
-                       <p class="text" href="#">support@nortsea.com</p>
-                       <p class="text" href="#">10.021211-118.469009</p>
-                     </div> -->
-                   </div>
-                </div>
-
-
-                <!-- <ul class="footer-col3-list">
-                <li><i class="fa fa-map-marker contact-type" aria-hidden="true"></i>Address: <a class="text" href="#">1100 Pico Blvd<br>
-                Santa Monica, CA 90405<br>
-                United States</a></li>
-                <li><i class="fa fa-phone contact-type" aria-hidden="true"></i>Phone: <a class="text" href="#">+4401233123208"</a></li>
-                <li><i class="fa fa-send contact-type" aria-hidden="true"></i>Email: <a class="text" href="#">support@nortsea.com</a></li>
-                <li><i class="fa fa-compass contact-type" aria-hidden="true"></i>GPS: <a class="text" href="#">10.021211-118.469009</a></li>
-              </div> -->
-              <div class="col-md-2">
-                <img src="assets/logo_160.png"></img>
-              </div>
+                  </div>
+                  <div class="col-md-2">
+                    <img src="assets/logo_160.png"></img>
+                  </div>
             </div>
             <div class="row bar">
                 <div class="copyright pull-left">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
