--- a/index.html
+++ b/index.html
@@ -177,19 +177,19 @@
         </p>
       </div>
       <div class="col-md-2 icon-desc discover-desc">
-        <p class="text-center">Lorem ipsum dolor sit amet, adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+        <p class="text-center">Nam liber tempor soluta nobis eiefend option congue nihil imperideit doming id quod mazim.</p>
         <p class="read-more text-center descover-desc"> Read More
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
       <div class="col-md-2 icon-desc">
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+        <p class="text-center">Nam liber tempor soluta nobis eiefend option congue nihil imperideit doming id quod mazim.</p>
         <p class="btn-read-more text-center"> Read More
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
       <div class="col-md-2 icon-desc">
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+        <p class="text-center">Nam liber tempor soluta nobis eiefend option congue nihil imperideit doming id quod mazim.</p>
         <p class="btn-read-more text-center"> Read More
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
@@ -296,7 +296,7 @@
       <div class="col-md-3">
         <div class="row box">
           <div class="col-md-12">
-           <h4 class="title">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
+           <h4 class="title-announce">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
            <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
            <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
@@ -315,17 +315,17 @@
        </div>
      </div>
   </main>
-  
+
     <!-- Footer -->
     <footer>
       <div class="row footer-top">
         <div class="col-md-2 col-md-offset-2 about">
-          <h4 class="title">NortSea About</h4>
-          <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo </a></p>
-          <a href="#">Read More  <i class="fa fa-caret-right"></i></a>
+          <h4 class="title-nortsea">NortSea About</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+          <p><a class="read-more" href="#">Read More  <i class="fa fa-caret-right"></i></a></p>
         </div>
         <div class="col-md-2 hotel">
-          <h4 class="title">NortSea Hotel</h4>
+          <h4 class="title-nortsea">NortSea Hotel</h4>
           <ul class="footer-col2-list">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Services</a></li>
@@ -333,18 +333,16 @@
           </ul>
         </div>
         <div class="col-md-2 contact-us">
-          <h4 class="title">Contact Us</h4>
+          <h4 class="title-nortsea">Contact Us</h4>
           <ul class="footer-col3-list">
-            <li><i class="fa fa-map-marker" aria-hidden="true"></i>Address: <a href="#">1100 Pico Blvd<br>
-            Santa Monica, CA 90405<br>
-            United States</a></li>
-            <li><i class="fa fa-phone" aria-hidden="true"></i>Phone: <a href="#">+4401233123208"</a></li>
-            <li><i class="fa fa-send" aria-hidden="true"></i>Email: <a href="#">support@nortsea.com</a></li>
-            <li><i class="fa fa-compass" aria-hidden="true"></i>GPS: <a href="#">10.021211-118.469009</a></li>
+            <li><i class="fa fa-map-marker" aria-hidden="true">  Address: </i><a class="footer-address" href="#">1100 Pico Blvd Santa Monica, CA 90405 United States</a></li>
+            <li><i class="fa fa-phone" aria-hidden="true">  Phone: </i><a class="footer-address" href="#">+4401233123208"</a></li>
+            <li><i class="fa fa-send" aria-hidden="true"> Email: </i><a class="footer-support" href="#">support@nortsea.com</a></li>
+            <li><i class="fa fa-compass" aria-hidden="true"> GPS: </i><a class="footer-contact-location" href="#">10.021211-118.469009</a></li>
           </ul>
         </div>
         <div class="col-md-2">
-          <img src="assets/logo_160.png"></img>
+          <img src="assets/logo-footer_360.png"></img>
         </div>
         <div class="row bar">
           <div class="copyright">
