reservation module still in progress

--- a/index.html
+++ b/index.html
@@ -57,7 +57,87 @@
       </aside>
     </section>
     <!-- Reservations -->
-    <section class="row header-section">
+    <section class="row reservation-head">
+      <div class="col-md-2 gutter"></div>
+      <div class="col-md-1 hotel-column">
+        <i class="fa fa-building" aria-hidden="true"> Hotel</i>
+      </div>
+    </section>
+    <section class="row reservation-content">
+      <div class="col-md-2 gutter"></div>
+      <div class="col-md-1 arrival">
+        <p>Arrival</p>
+        <input type="text" placeholder="16.07.2015"><i class="fa fa-calendar"></i>
+      </div>
+      <div class="col-md-1 going">
+        <p>Going</p>
+        <input type="text" placeholder="16.07.2015"><i class="fa fa-calendar"></i>
+      </div>
+      <div class="col-md-1 room">
+        <p>Room</p>
+        <div class="btn-group">
+          <button type="button" class="btn btn-default">1</button>
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-1 person">
+        <p>Person</p>
+        <div class="btn-group">
+          <button type="button" class="btn btn-default">1</button>
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-1 child">
+        <p>Child</p>
+        <div class="btn-group">
+          <button type="button" class="btn btn-default">1</button>
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-1 day">
+        <p>Day</p>
+        <div class="btn-group">
+          <button type="button" class="btn btn-default">1</button>
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-2 search-button">
+        <button class="btn btn-default" type="button">SEARCH BOOK</button>
+      </div>
+    </section>
+    <!-- <section class="row header-section">
       <div class="row" id="hotel-reservation-module">
         <div class="row module-tab">
           <div class="col-md-1">
@@ -134,7 +214,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Logos -->
     <div class="row">
       <div class="col-md-2"></div>
@@ -315,7 +395,7 @@
        </div>
      </div>
   </main>
-  
+
     <!-- Footer -->
     <footer>
       <div class="row footer-top">
