--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -32,8 +32,8 @@
             <li><a href="#" class="fa fa-envelope" alt="envelope logo"></a></li>
           </ul>
           <ul class="nav navbar-nav">
-            <li><a class="active" href="../index.html">Home</a></li>
-            <li><a href="../pages/02-about-us.html">About Us</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a class="active" href="../pages/02-about-us.html">About Us</a></li>
             <li class="dropdown"><a href="../pages/09-services.html">Services <span class="caret"></span></a></li>
             <li><a href="../pages/05-products.html">Products <span class="caret"></span></a></li>
             <li><a href="../pages/04-gallery.html">Gallery</a></li>
@@ -62,7 +62,7 @@
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <h1 class=" text-center about-us-desc"><strong>ABOUT US</strong></h1>
-          <p class="text-center desc-about-us"><strong><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></strong></p>
+          <p class="text-center desc-about-us"><<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
           <p class="text-center desc-about-us desc-about-content"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
       </div>
       <div class="col-md-2"></div>
@@ -86,16 +86,16 @@
     <div class="row">
       <div class="col-md-2 icon-card"></div>
       <div class="col-md-2 icon-card">
-        <p class="text-center"><strong>Amazing Travel</strong></p>
+        <p class="text-center icon-card-title"><strong>Amazing Travel</strong></p>
       </div>
       <div class="col-md-2 icon-card">
-        <p class="text-center"><strong>Discover</strong></p>
+        <p class="text-center icon-card-title"><strong>Discover</strong></p>
       </div>
       <div class="col-md-2 icon-card">
-        <p class="text-center"><strong>Book Your Trip</strong></p>
+        <p class="text-center icon-card-title"><strong>Book Your Trip</strong></p>
       </div>
       <div class="col-md-2 icon-card">
-        <p class="text-center"><strong>Nice Support</strong></p>
+        <p class="text-center icon-card-title"><strong>Nice Support</strong></p>
       </div>
       <div class="col-md-2"></div>
     </div>
@@ -103,25 +103,25 @@
       <div class="col-md-2 icon-desc"></div>
       <div class="col-md-2 icon-desc">
         <p class="text-center">Nam liber tempor soluta nobis eiefend option congue nihil imperideit doming id quod mazim.</p>
-        <p class="btn-read-more text-center"> Read More
+        <p class="text-center btn-read-more"> Read More
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
       <div class="col-md-2 icon-desc">
         <p class="text-center">Lorem ipsum dolor sit amet, adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-        <p class="btn-read-more text-center"> Read More
+        <p class="text-center btn-read-more"> Read More
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
       <div class="col-md-2 icon-desc">
         <p class="text-center">Lorem ipsum dolor sit amet, adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-        <p class="btn-read-more text-center"> Read More
+        <p class="text-center btn-read-more"> Read More
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
       <div class="col-md-2 icon-desc">
         <p class="text-center">Lorem ipsum dolor sit amet, adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-        <p class="btn-read-more text-center"> Read More
+        <p class="text-center btn-read-more"> Read More
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
