--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -31,12 +31,12 @@
             <li><a href="#" class="fa fa-envelope" alt="envelope logo"></a></li>
           </ul>
           <ul class="nav navbar-nav">
-            <li><a class="active" href="../index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../pages/02-about-us.html">About Us</a></li>
             <li class="dropdown"><a href="../pages/09-services.html">Services <span class="caret"></span></a></li>
             <li><a href="../pages/05-products.html">Products <span class="caret"></span></a></li>
             <li><a href="../pages/04-gallery.html">Gallery</a></li>
-            <li><a href="../pages/03-contact.html">Contact</a></li>
+            <li><a class="active" href="../pages/03-contact.html">Contact</a></li>
             <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
           </ul>
         </nav>
@@ -65,6 +65,11 @@
           <p class="text-center desc-about-us desc-about-content"><em>02563234234</em></p>
       </div>
   </div>
+  <div class="row about-us-back black-space">
+    <div class="col-md-2"></div>
+    <div class="col-md-8"></div>
+    <div class="col-md-2"></div>
+  </div>
   <main class="row info contact-feed">
     <div class="col-md-4 contact_info">
       <h3>Contact Info</h3>
@@ -81,13 +86,16 @@
            <p class="descrip">Email:</p>
            <p class-"d-info">info@waxom.com<br>support@waxom.com</p>
            <p class="descrip">Social Network:</p>
-
+           <a href="#" class="social-media-icons fa fa-facebook"></a>
+           <a href="#" class="social-media-icons-twitter fa fa-twitter"></a>
+           <a href="#" class="social-media-icons fa fa-dribbble"></a>
+           <a href="#" class="social-media-icons fa fa-instagram"></a>
         </div>
       </div>
   </div>
     <div class="col-md-4 feedback">
    <h3>Feedback</h3>
-   <div class="form-group">
+   <div class="form-group first-input">
       <input class="name" placeholder="Your Name" type="text"></input>
    </div>
    <div class="form-group">
