--- a/index.html
+++ b/index.html
@@ -314,87 +314,87 @@
        </div>
      </div>
   </main>
-      <!-- Footer -->
-      <footer>
-          <div class="footer-container-fluid">
-            <div class="row footer-top">
-              <div class="col-md-2 col-md-offset-2 about">
-                  <h4>NortSea About</h4>
-                  <p><a class="text" href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo </a></p>
-                  <a class="text" href="#">Read More  <i class="fa fa-caret-right"></i></a>
-              </div>
-              <div class="col-md-2 hotel">
-                <h4>NortSea Hotel</h4>
-                <ul class="footer-col2-list">
-                  <li><a class="text" href="#">About Us</a></li>
-                  <li><a class="text" href="#">Services</a></li>
-                  <li><a class="text" href="#">Contact</a></li>
-                </ul>
-              </div>
-              <div class="col-md-2 contact-us">
-                  <h4>Contact Us</h4>
-                   <div class="row flex-container address">
-                     <div class="col-md-1 icon">
-                      <p><i class="fa fa-map-marker" aria-hidden="true"></i></p>
-                     </div>
-                     <div class="col-md-3 contact-type">
-                       <p href="#">Address:</p>
-                     </div>
-                     <div class="col-md-8 information">
-                       <p class="text" href="#">1100 Pico Blvd<br>Santa Monica, CA 90405<br>United States</p>
-                     </div>
-                      <div><p class="border-line"></p></div>
-                   </div>
-                   <div class="row flex-container phone">
-                     <div class="col-md-1 icon">
-                      <p><i class="fa fa-phone" aria-hidden="true"></i></p>
-                     </div>
-                     <div class="col-md-3 contact-type">
-                       <p href="#">Phone:</p>
-                     </div>
-                     <div class="col-md-8 information">
-                       <p class="text" href="#">+4401233123208</p>
-                     </div>
-                     <div><p class="border-line"></p></div>
-                   </div>
-                   <div class="row flex-container email">
-                     <div class="col-md-1 icon">
-                      <p><i class="fa fa-send" aria-hidden="true"></i></p>
-                     </div>
-                     <div class="col-md-3 contact-type">
-                       <p href="#">Email:</p>
-                     </div>
-                     <div class="col-md-8 information">
-                       <p class="text" href="#">support@nortsea.com</p>
-                     </div>
-                      <div><p class="border-line"></p></div>
-                   </div>
-                   <div class="row flex-container gps">
-                     <div class="col-md-1 icon">
-                      <p><i class="fa fa-compass" aria-hidden="true"></i></p>
-                     </div>
-                     <div class="col-md-3 contact-type">
-                       <p href="#">GPS:</p>
-                     </div>
-                     <div class="col-md-8 information">
-                       <p class="text" href="#">10.021211-118.469009</p>
-                     </div>
-                     <div><p class="border-line"></p></div>
-                   </div>
-                  </div>
-                  <div class="col-md-2">
-                    <img src="assets/logo_160.png"></img>
-                  </div>
+  <!-- Footer -->
+  <footer>
+    <div class="footer-container-fluid">
+      <div class="col-md-1 blank-footer"></div>
+      <div class="row footer-top">
+        <div class="col-md-2 about">
+          <h4>NortSea About</h4>
+          <p><a class="text" href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo </a></p>
+          <a class="text" href="#">Read More  <i class="fa fa-caret-right"></i></a>
+        </div>
+        <div class="col-md-2 hotel">
+          <h4>NortSea Hotel</h4>
+          <ul class="footer-col2-list">
+            <li><a class="text" href="#">About Us</a></li>
+            <li><a class="text" href="#">Services</a></li>
+            <li><a class="text" href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 contact-us">
+          <h4>Contact Us</h4>
+          <div class="row address">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-map-marker" aria-hidden="true"></i></p>
             </div>
-            <div class="row bar">
-                <div class="copyright pull-left">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
-                <div class="copyright pull-right">Designed by Faith34</div>
+            <div class="col-md-2 contact-type">
+              <p class="text" href="#">Address:</p>
             </div>
-               </div>
-             </div>
+            <div class="col-md-7 information">
+              <p href="#">1100 Pico Blvd<br>Santa Monica, CA 90405<br>United States</p>
+            </div>
           </div>
-      </footer>
-  </div>
+          <div><p class="border-line"></p></div>
+          <div class="row phone">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-phone" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p class="text" href="#">Phone:</p>
+            </div>
+            <div class="col-md-7 information">
+              <p href="#">+4401233123208</p>
+            </div>
+          </div>
+          <div><p class="border-line"></p></div>
+          <div class="row email">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-send" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p class="text" href="#">Email:</p>
+            </div>
+            <div class="col-md-7 information">
+              <p href="#">support@nortsea.com</p>
+            </div>
+          </div>
+          <div><p class="border-line"></p></div>
+          <div class="row gps">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-compass" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p class="text" href="#">GPS:</p>
+            </div>
+            <div class="col-md-8 information">
+              <p href="#">10.021211-118.469009</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 logo">
+          <img src="assets/logo-footer_360.png"></img>
+        </div>
+      </div>
+        <div class="row bar">
+          <div class="copyright pull-left">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
+          <div class="copyright pull-right">Designed by Faith34</div>
+        </div>
+        <div class="col-md-1 blank-footer"></div>
+      </div>
+    </div>
+  </footer>
+</div>
 <!--- Closing Container Div -->
 </body>
 </html>
