reservation mod changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="css/01-index.css">
   <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
+
 </head>
 <body>
   <div class="container-fluid">
@@ -67,11 +70,11 @@
       <div class="col-md-2 gutter"></div>
       <div class="col-md-1 arrival">
         <p>Arrival</p>
-        <input type="text" placeholder="16.07.2015"><i class="fa fa-calendar"></i>
+        <input type="text-icon" placeholder="16.07.2015"><i class="fa fa-calendar"></i>
       </div>
       <div class="col-md-1 going">
         <p>Going</p>
-        <input type="text" placeholder="16.07.2015"><i class="fa fa-calendar"></i>
+        <input type="text-icon" placeholder="16.07.2015"><i class="fa fa-calendar"></i>
       </div>
       <div class="col-md-1 room">
         <p>Room</p>
@@ -137,84 +140,6 @@
         <button class="btn btn-default" type="button">SEARCH BOOK</button>
       </div>
     </section>
-    <!-- <section class="row header-section">
-      <div class="row" id="hotel-reservation-module">
-        <div class="row module-tab">
-          <div class="col-md-1">
-            <i class="fa fa-building" aria-hidden="true"> Hotel</i>
-          </div>
-        </div>
-      </div>
-      <div class="row module-content clearfix">
-        <div class="row" id="button-names">
-          <div class="col-md-1 resize"><span>Arrival</span></div>
-          <div class="col-md-1 resize"><span>Going</span></div>
-          <div class="col-md-2 resize"><span>Room</span></div>
-          <div class="col-md-2 resize"><span>Person</span></div>
-          <div class="col-md-2 resize"><span>Child</span></div>
-          <div class="col-md-2 resize"><span>Day</span></div>
-        </div>
-        <div class="row input-row">
-          <div class="col-md-1 arrival-input resize">
-            <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
-          </div>
-          <div class="col-md-1 going-input resize">
-            <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
-          </div>
-          <div class="col-md-2 room-btn resize">
-            <div class="btn-group">
-              <button type="button" class="btn">2</button>
-              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">1</a></li>
-                <li><a href="#">3</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-2 person-btn resize">
-            <div class="btn-group">
-              <button type="button" class="btn">2</button>
-              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">1</a></li>
-                <li><a href="#">3</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-2 child-btn resize">
-            <div class="btn-group">
-              <button type="button" class="btn">1</button>
-              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-2 day-btn resize">
-            <div class="btn-group">
-              <button type="button" class="btn">1</button>
-              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-1">
-            <button class="btn btn-basic btn-md" name="button">SEARCH BOOK</button>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <!-- Logos -->
     <div class="row">
       <div class="col-md-2"></div>
