need to align copyright, right justify  contact-type, vertically align image

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
   <!-- Footer -->
   <footer>
     <div class="footer-container-fluid">
-      <div class="col-md-1 blank-footer"></div>
+      <div class="col-md-1 blank-column"></div>
       <div class="row footer-top">
         <div class="col-md-2 about">
           <h4>NortSea About</h4>
@@ -339,7 +339,7 @@
               <p><i class="fa fa-map-marker" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p class="text" href="#">Address:</p>
+              <p href="#">Address:</p>
             </div>
             <div class="col-md-7 information">
               <p href="#">1100 Pico Blvd<br>Santa Monica, CA 90405<br>United States</p>
@@ -351,7 +351,7 @@
               <p><i class="fa fa-phone" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p class="text" href="#">Phone:</p>
+              <p href="#">Phone:</p>
             </div>
             <div class="col-md-7 information">
               <p href="#">+4401233123208</p>
@@ -363,7 +363,7 @@
               <p><i class="fa fa-send" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p class="text" href="#">Email:</p>
+              <p href="#">Email:</p>
             </div>
             <div class="col-md-7 information">
               <p href="#">support@nortsea.com</p>
@@ -375,7 +375,7 @@
               <p><i class="fa fa-compass" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p class="text" href="#">GPS:</p>
+              <p class="contact-type pull-left" href="#">GPS:</p>
             </div>
             <div class="col-md-8 information">
               <p href="#">10.021211-118.469009</p>
@@ -383,14 +383,19 @@
           </div>
         </div>
         <div class="col-md-2 logo">
-          <img src="assets/logo-footer_360.png"></img>
+          <img class="center-block vertical-center" src="assets/logo-footer_360.png"></img>
         </div>
       </div>
+
         <div class="row bar">
-          <div class="copyright pull-left">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
-          <div class="copyright pull-right">Designed by Faith34</div>
+          <div class="col-md-1 blank-column"></div>
+            <div class="col-md-10">
+              <div class="copyright">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
+              <div class="copyright">Designed by Faith34</div>
+            </div>
         </div>
-        <div class="col-md-1 blank-footer"></div>
+      </div>
+
       </div>
     </div>
   </footer>
