changes to btn classes and input classes

--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
       <div class="col-md-2 gutter"></div>
       <div class="col-md-1 arrival">
         <p>Arrival</p>
-        <input type="text-icon" placeholder="16.07.2015"><i class="fa fa-calendar"></i>
+        <input type="text" class="input-box" placeholder="16.07.2015"><i class="fa fa-calendar"></i>
       </div>
       <div class="col-md-1 going">
         <p>Going</p>
-        <input type="text-icon" placeholder="16.07.2015"><i class ="fa fa-calendar"></i>
+        <input type="text" class="input-box" placeholder="16.07.2015"><i class ="fa fa-calendar"></i>
       </div>
       <div class="col-md-1 room">
         <p>Room</p>
-        <div class="btn-group">
+        <div class="btn-group-room">
           <button type="button" class="btn btn-default">1</button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
@@ -91,7 +91,7 @@
       </div>
       <div class="col-md-1 person">
         <p>Person</p>
-        <div class="btn-group">
+        <div class="btn-group-person">
           <button type="button" class="btn btn-default">1</button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
@@ -106,7 +106,7 @@
       </div>
       <div class="col-md-1 child">
         <p>Child</p>
-        <div class="btn-group">
+        <div class="btn-group-child">
           <button type="button" class="btn btn-default">1</button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
@@ -121,7 +121,7 @@
       </div>
       <div class="col-md-1 day">
         <p>Day</p>
-        <div class="btn-group">
+        <div class="btn-group-day">
           <button type="button" class="btn btn-default">1</button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
