removed container-fluid from 04-gallery.css. update banner to georgia style. Add class to adjust the width of btn-sm to the correct width as the mock up.

--- a/pages/04-gallery.html
+++ b/pages/04-gallery.html
@@ -74,8 +74,8 @@
           <button type="button" class="btn-basic btn-sm">Bar</button>
           <button type="button" class="btn-basic btn-sm">Gym</button>
           <div class="right-button" id="right-button">
-          <button type="button" class="btn-basic btn-sm"> < </button>
-          <button type="button" class="btn-basic btn-sm"> > </button>
+          <button type="button" class="btn-basic btn-sm arrow"> < </button>
+          <button type="button" class="btn-basic btn-sm arrow"> > </button>
         </div>
       </div>
     </div>
