update font-size in banner in css. Update width of btn-sm in html and css. create and update width of arrows class buttons.

--- a/pages/05-products.html
+++ b/pages/05-products.html
@@ -73,8 +73,8 @@
           <button type="button" class="btn-basic btn-sm">Lorem</button>
           <button type="button" class="btn-basic btn-sm">Lorem</button>
           <div class="right-button" id="right-button">
-          <button type="button" class="btn-basic btn-sm"> < </button>
-          <button type="button" class="btn-basic btn-sm"> > </button>
+          <button type="button" class="btn-basic btn-sm arrow-prd"> < </button>
+          <button type="button" class="btn-basic btn-sm arrow-prd"> > </button>
         </div>
       </div>
     </div>
