update font-sizes in html and css. Add old google chrome image.

--- a/pages/07-news-detail.html
+++ b/pages/07-news-detail.html
@@ -66,7 +66,7 @@
               <span>Share:</span>
               <a href="#" class="fa fa-facebook logo-fb"></a>
               <a href="#" class="fa fa-twitter"></a>
-              <a href="#" class="fa fa-google-plus-g"></a>
+              <img src="https://png.icons8.com/android/18/d7d7d7/google-plus.png">
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni repudiandae quaerat distinctio repellendus veritatis blanditiis laudantium animi, perferendis quae exercitationem minima? Unde commodi cupiditate reiciendis pariatur tempora deleniti nemo? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, fugit at! Omnis, amet aliquid corporis hic minus recusandae incidunt reprehenderit dolorum, officiis sed expedita commodi corrupti veniam delectus beatae quibusdam.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error velit a architecto iure aliquid aut dignissimos maiores odit eius suscipit, officiis nobis exercitationem! Nobis explicabo beatae sit dolore perspiciatis? Porro! Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sunt, molestias placeat quod voluptatum deleniti ipsa suscipit culpa tenetur ex reiciendis neque eos quas, veritatis, cumque quaerat nihil voluptates quis!</p>
