--- a/pages/08-news-image.html
+++ b/pages/08-news-image.html
@@ -31,7 +31,7 @@
             <li><a href="#" class="fa fa-envelope" alt="envelope logo"></a></li>
           </ul>
           <ul class="nav navbar-nav">
-            <li><a class="active" href="../index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../pages/02-about-us.html">About Us</a></li>
             <li class="dropdown"><a href="../pages/09-services.html">Services <span class="caret"></span></a></li>
             <li><a href="../pages/05-products.html">Products <span class="caret"></span></a></li>
