--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <p><i class="fa fa-phone" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p href="#">Phone:</p>
+              <p href="#">  Phone:</p>
             </div>
             <div class="col-md-7 information">
               <p href="#">+4401233123208</p>
@@ -363,7 +363,7 @@
               <p><i class="fa fa-send" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p href="#">Email:</p>
+              <p href="#">   Email:</p>
             </div>
             <div class="col-md-7 information">
               <p href="#">support@nortsea.com</p>
@@ -375,7 +375,7 @@
               <p><i class="fa fa-compass" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p class="contact-type pull-left" href="#">GPS:</p>
+              <p class="contact-type pull-left" href="#">    GPS:</p>
             </div>
             <div class="col-md-8 information">
               <p href="#">10.021211-118.469009</p>
@@ -383,15 +383,17 @@
           </div>
         </div>
         <div class="col-md-2 logo">
-          <img class="center-block vertical-center" src="assets/logo-footer_360.png"></img>
+          <img class="center-block" src="assets/logo-footer_360.png"></img>
         </div>
       </div>
 
         <div class="row bar">
           <div class="col-md-1 blank-column"></div>
-            <div class="col-md-10">
-              <div class="copyright">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
-              <div class="copyright">Designed by Faith34</div>
+            <div class="col-md-5">
+              <div class="copyright pull-left">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
+            </div>
+            <div class="col-md-4">
+              <div class="designer pull-right">Designed by Faith34</div>
             </div>
         </div>
       </div>
