fixes to reservation module

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
       </div>
       <div class="col-md-2 search-button">
-        <button class="btn btn-default" type="button">SEARCH BOOK</button>
+        <button class="btn btn-grey btn-sm" type="button">SEARCH BOOK</button>
       </div>
     </section>
     <!-- Logos -->
