--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -62,7 +62,7 @@
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <h1 class=" text-center about-us-desc"><strong>ABOUT US</strong></h1>
-          <p class="text-center desc-about-us"><<em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
+          <p class="text-center desc-about-us"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
           <p class="text-center desc-about-us desc-about-content"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
       </div>
       <div class="col-md-2"></div>
@@ -138,20 +138,20 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-2 png-rows">
-        <img src="../assets/gray-circular-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+        <img src="../assets/gray-circular-background.png" class="img-responsive center-block">
+        <img src="../assets/about-us-img.png" class="img-responsive blank-img center-block">
       </div>
       <div class="col-md-2 png-rows">
-        <img src="../assets/gray-circular-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+        <img src="../assets/gray-circular-background.png" class="img-responsive center-block">
+        <img src="../assets/about-us-img.png" class="img-responsive blank-img center-block">
       </div>
       <div class="col-md-2 png-rows">
-        <img src="../assets/gray-circular-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+        <img src="../assets/gray-circular-background.png" class="img-responsive center-block">
+        <img src="../assets/about-us-img.png" class="img-responsive blank-img center-block">
       </div>
       <div class="col-md-2 png-rows">
-        <img src="../assets/gray-circular-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+        <img src="../assets/gray-circular-background.png" class="img-responsive center-block">
+        <img src="../assets/about-us-img.png" class="img-responsive blank-img center-block">
       </div>
       <div class="col-md-2"></div>
     </div>
