--- a/index.html
+++ b/index.html
@@ -258,58 +258,58 @@
     <!-- News, Announcements, and Products -->
     <main class="row nap">
       <div class="col-md-1 blank-nap"></div>
-      <div class="col-md-4 box">
-          <h4 class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
+      <div class="col-md-5 box">
+          <p class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></p>
           <div class="row">
             <div class="col-md-6 col1">
               <img class="img-responsive" src="assets/Jan-29.png">
             </div>
-            <div class="col-md-5 col2">
+            <div class="col-md-4 col2">
               <p class="headln">Lorem ipsum dolor sit amet</p>
               <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+              <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 col1">
               <img class="img-responsive" src="assets/Feb-15.png">
             </div>
-            <div class="col-md-5 col2">
+            <div class="col-md-4 col2">
               <p class="headln">Lorem ipsum dolor sit amet</p>
               <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+              <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 col1">
               <img class="img-responsive" src="assets/Mar-2.png">
             </div>
-            <div class="col-md-5 col2">
+            <div class="col-md-4 col2">
               <p class="headln">Lorem ipsum dolor sit amet</p>
               <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+              <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
             </div>
           </div>
           <button class="btn-view-all btn-default btn-block" role="button">View All</button>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="row box">
           <div class="col-md-12">
-           <h4 class="title">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
+           <p class="title">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></p>
            <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-           <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+           <p class="text">Read More <i class="fa fa-caret-right"></i></p>
            <div class="border-line"></div>
            <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-           <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+           <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
          </div>
         </div>
         <div class="row box top-buffer">
-          <div class="col-md-7">
-            <h4 class="title">Products</h4>
+          <div class="col-md-7 products">
+            <p class="title">Products</p>
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-            <p class="headln">Read More <i class="fa fa-caret-right"></i></a></p>
+            <p class="read-more">Read More <i class="fa fa-caret-right"></i></a></p>
           </div>
        </div>
      </div>
